# site_gestaao_os_orcamentos

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT_LOG.md  HANDOFF_AI.md  Makefile  PROJECT_CONTEXT.md  README.md  alembic.ini  docker-compose.yml
.github/: copilot-instructions.md
app/: server.py
app/static/: app.js  index.html  styles.css
apps/api/: pyproject.toml
apps/api/provisao_api/: __init__.py  completion_api.py  config.py  crm_api.py  db.py  equipment_api.py  main.py  models.py  operations_api.py  technical_api.py  worker.py  workflow_api.py
apps/api/provisao_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/provisao_api/services/: __init__.py  conversations.py  crypto.py  delivery.py  inbox_worker.py  polling.py  storage.py  telegram.py  workflow.py
apps/api/tests/: test_completion_operations.py  test_crm.py  test_equipment.py  test_omnichannel.py  test_security_api.py  test_service_order_operations.py  test_sqlite_import.py  test_technical_records.py  test_telegram_api.py  test_telegram_vertical.py  test_workflow.py
docs/adr/: 001-stdlib-mvp.md  002-modular-fastapi-foundation.md  003-alembic-and-legacy-import.md  004-rbac-scoped-organization.md  005-canonical-channel-outbox.md  006-telegram-credentials-storage-workers.md  (+1 more)
frontend-web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
infra/: api.Dockerfile  nginx.conf  web-nginx.conf  web.Dockerfile
migrations/: env.py  script.py.mako
scripts/: import_sqlite.py  run.py
tests/: test_mvp.py
(+24 files in other folders)
