[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "provisao-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2", "fastapi>=0.115,<0.116", "httpx>=0.27,<1",
  "passlib[argon2]>=1.7,<2", "psycopg[binary]>=3.2,<4", "pydantic-settings>=2.6,<3",
  "email-validator>=2.2,<3", "PyJWT>=2.9,<3", "redis>=5,<6", "sqlalchemy>=2.0,<3", "uvicorn[standard]>=0.30,<1"
]

[tool.setuptools]
packages = ["provisao_api"]
